src/test/ui/parser/fn-arg-doc-comment.stderr
error: attributes cannot be applied to a function parameter's type
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/fn-arg-doc-comment.rs:16:12
=======
  --> $DIR/fn-arg-doc-comment.rs:12:12
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL | fn bar(id: #[allow(dead_code)] i32) {}
   |            ^^^^^^^^^^^^^^^^^^^ attributes are not allowed here

error: documentation comments cannot be applied to function parameters
  --> $DIR/fn-arg-doc-comment.rs:2:5
   |
LL |     /// Comment
   |     ^^^^^^^^^^^ doc comments are not allowed here

error: documentation comments cannot be applied to function parameters
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/fn-arg-doc-comment.rs:8:5
=======
  --> $DIR/fn-arg-doc-comment.rs:6:5
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     /// Other
   |     ^^^^^^^^^ doc comments are not allowed here

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0658]: attributes on function parameters are unstable
  --> $DIR/fn-arg-doc-comment.rs:2:5
   |
LL |     /// Comment
   |     ^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/60406
   = help: add `#![feature(param_attrs)]` to the crate attributes to enable

error[E0658]: attributes on function parameters are unstable
  --> $DIR/fn-arg-doc-comment.rs:8:5
   |
LL |     /// Other
   |     ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/60406
   = help: add `#![feature(param_attrs)]` to the crate attributes to enable

=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
error[E0308]: mismatched types
  --> $DIR/fn-arg-doc-comment.rs:18:7
   |
LL |     f("", "");
   |       ^^ expected u8, found reference
   |
   = note: expected type `u8`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/fn-arg-doc-comment.rs:18:11
   |
LL |     f("", "");
   |           ^^ expected u8, found reference
   |
   = note: expected type `u8`
              found type `&'static str`

error[E0308]: mismatched types
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/fn-arg-doc-comment.rs:29:9
=======
  --> $DIR/fn-arg-doc-comment.rs:25:9
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     bar("");
   |         ^^ expected i32, found reference
   |
   = note: expected type `i32`
              found type `&'static str`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
